--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<style type = "text/css">
   h1 
   {text-align: center;
   font-familly: "Times New Roman";
@@ -32,9 +31,13 @@
    }
   h4  
   {padding-top: 275xp;
-  text-align: center;
   font-familly: "Times New Roman";
   font-size: 20px;
    color: #000000;
    }
-</style>
+  div.text
+  {padding-top: 275xp;
+  font-familly: "Times New Roman";
+  font-size: 15px;
+   color: #000000;
+   }
